# nosql_datavis

./: README.md  main.ipynb  pyproject.toml
data/: document_db.json  key_value_db.json
data/graph_data/: author_coauthor_features.csv  author_id.csv  co_author_relation.csv
