[tool.poetry]
name = "dataviz"
version = "0.1.0"
description = "Data Visualisation"
authors = ["Viraj Shah <viraj.dev@skiff.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
networkx = "^3.2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
